k8s/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pwa-ingress
spec:
  backend:
    serviceName: pwa-frontend
    servicePort: 80
